--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "backendmain",
   "version": "1.0.0",
   "description": "a backend start",
+  "type": "module",
   "keywords": [
     "js",
     "backend"
   ],
   "license": "ISC",
   "author": "Mahesh Kumar",
-  "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10",
+    "prettier": "^3.6.2"
   }
 }
